css added to fix zoom on mobile in contact page

--- a/src/About.css
+++ b/src/About.css
@@ -148,7 +148,4 @@ html {
     -webkit-text-size-adjust: 100%;
 }
 
-input[type="text"]:focus,
-textarea:focus {
-    -webkit-text-size-adjust: 100%;
-}
+input, select { font-size: 100%; }
